docs: updated readme

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FullstackReactNode",
+  "name": "fullstack-react-node",
   "version": "0.0.1",
   "description": "A Boilerplate for building fullstack applications with React, React Native and Node.",
   "author": "Brijesh Bhakta <brijeshbhakta30@gmail.com>",
