--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,9 @@ local.properties
 # node.js
 #
 node_modules/
-npm-debug.log
-yarn-error.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # BUCK
 buck-out/
@@ -57,3 +58,21 @@ buck-out/
 
 # CocoaPods
 /ios/Pods/
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
